# hfovis

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  widget_coreg.py
.github/workflows/: publish-docs.yml
docs/: data.html  detector.html  genindex.html  gui.html  hfovis.data.html  hfovis.denoiser.html  hfovis.gui.html  hfovis.html  index.html  interface.html  main.html  modules.html  py-modindex.html  searchindex.js  widget_coreg.html
docs/_modules/: index.html  interface.html  widget_coreg.html
docs/_modules/data/: loaders.html
docs/_modules/denoiser/: omp.html
docs/_modules/hfovis/: interface.html
docs/_sources/: detector.rst.txt  gui.rst.txt  hfovis.data.rst.txt
docs/html/: .buildinfo  .buildinfo.bak  denoiser.html  genindex.html  hfovis.data.html  hfovis.denoiser.html  hfovis.detector.html  hfovis.gui.html  hfovis.html  index.html  interface.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  widget_coreg.html
docs/html/_modules/: index.html
hfovis/: __init__.py  event_worker.py  gui.py  interface.py  interface.ui  live_worker.py
hfovis/data/: buffering.py  ieeg_loader.py  loaders.py  streaming.py
hfovis/denoiser/: __init__.py  features.py  normalize.py  omp.py  vfactor.py  worker.py
hfovis/detector/: __init__.py  config.py  detector.py  utils.py
hfovis/gui/: config.py  config_menu.py  denoising_heatmap.py  frequency.py  main_window.py  model.py  raster.py  spectrogram.py  time_series.py
sphinx/source/: conf.py  hfovis.denoiser.rst  index.rst  modules.rst  widget_coreg.rst
(+33 files in other folders)
