[project]
name = "hfovis"
version = "0.1.0"
description = "A Python GUI for visualizing HFOs from iEEG data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "nibabel>=5.3.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pyvista>=0.45.2",
    "scikit-learn==1.6.1",
    "scipy>=1.15.3",
    "setuptools<81",
    "streamz>=0.6.4",
    "tabula>=1.0.5",
    "tqdm>=4.67.1",
]
